# sdk-trusted-firmware-m

config/: config_base.cmake
lib/ext/psa-adac/: CMakeLists.txt
secure_fw/partitions/: CMakeLists.txt
secure_fw/partitions/adac/: CMakeLists.txt  tfm_adac.c  tfm_adac.yaml
tools/: tfm_manifest_list.yaml
